feat: JVM简介 & linux命令